<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="Popular_movies">POPULAR MOVIES</string>
    <string name="Stock_hawk">STOCK HAWK</string>
    <string name="Build_it_bigger">BUILD IT BIGGER</string>
    <string name="Make_your_app_material">MAKE YOUR APP MATERIAL</string>
    <string name="Go_ubiquitous">GO UBIQUITOUS</string>
    <string name="Capstone">CAPSTONE</string>
</resources>
